[TASK] Spatial Audio

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Library/metadata
 Library
 Assets/Zombie
+Assets/Standard Assets/Characters/FirstPersonCharacter/Audio
+Temp
+Assets/Standard Assets
