Restructure and load menu

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Assets/Standard Assets/Characters/FirstPersonCharacter/Audio
 Temp
 Assets/Standard Assets
 Assets/iOSHapticFeedback
+Assets/Plugins
+Assets/SwipeMenu
+obj/Debug
+Assets/Video
