Audio Jam using position instead of collision detection since it caused problems on iOS

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\AudioJamPlayer.cs" />
+     <Compile Include="Assets\AudioJamTrigger.cs" />
      <Compile Include="Assets\LoadMovieFeedbackControl.cs" />
      <Compile Include="Assets\RangeHapticFeedback.cs" />
      <Compile Include="Assets\SceneLoader.cs" />
